Update intro, skills, projects, and links in footer

--- a/index.html
+++ b/index.html
@@ -1,85 +1,230 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width" initial-scale="1.0" />
     <title>Wineshuga</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/sofia" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
-</head>
+    <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/sofia" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </nav>
+      <nav>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </nav>
     </header>
     <main>
-        <section>
-            <div class="intro">
-                <h1>Hello. I'm Winnie </h1>
-                <p> ... a Frontend Web Developer. I code, read and write (sometimes).
-                    I workhard at trying to make everyday good, so I love fun activities
-                    with friends and enjoy a lot of me-time too.
-                </p>
-            </div>
-        </section>
-        <section id="skills">
-            <div class="skills">
-                <h3>My Skills</h3>
-                <ul>
-                    <li>Html</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React.js</li>
-                    <li>Git and GitHub</li>
-                </ul>
-            </div>
-        </section>
-        <section id="projects">
-            <div class="projects">
-                <div class="img-box">
-                    <img src="images/blog site.png" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/blog-site">Click Here - A Blog Site.</a>
-                </div>
-                <div class="img-box">
-                    <img src="images/AwesomeBooks.PNG" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/AwesomeBooks/">Click Here - AwesomeBooks App</a>
-                </div>
-                <div class="img-box">
-                    <img src="images/EmpowerHer.PNG" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/EmpowerHER-Foundation/">Click Here - EmpowerHer</a>
-                </div>
-                <div class="img-box">
-                    <img src="images/LoyaltyApp.PNG" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/loyalty-app">Click Here - Loyalty App</a>
-                </div>
-                <div class="img-box">
-                    <img src="images/FrontendMentor project 1 (2).png" alt="thumbnail">
-                    <a href="https://drop-down-nav.netlify.app/">Click Here - Nav Page</a>
-                </div>
-                <div class="img-box">
-                    <img src="images/ToDo list.PNG" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/to-do-list/dist">Click Here - To Do App</a>
-                </div>
-            </div>
-        </section>
+      <section>
+        <div class="intro">
+          <h1>Hello. I'm Winnie</h1>
+          <p>
+            I am a Full-stack Developer, with a background in Agriculture,
+            Customer Service, and Professional teaching. I have been in the tech
+            industry for 2 years and in the past 7 months, I have extensively
+            applied myself to various skills and tools while working as a
+            self-employed developer.
+          </p>
+          <p>
+            I have had the opportunity to pair-program with colleagues from
+            diverse cultures and backgrounds and work on real-world problems,
+            building 20+ amazing projects both solo and collaboratively.
+          </p>
+          <p>
+            In my free time, I listen to lots of music, spend time with family
+            and friends, read a book, solve some coding challenges, or watch
+            movies. Soon, I will add biking, learning the guitar, and taking
+            evening walks to the list.
+          </p>
+        </div>
+      </section>
+      <section>
+        <div class="skills">
+          <h3 id="skills">My Skills</h3>
+          <ul>
+            <li>Ruby on Rails</li>
+            <li>Ruby</li>
+            <li>PostgreSQL</li>
+            <li>React JS</li>
+            <li>Redux TK</li>
+            <li>Tailwind CSS</li>
+            <li>JavaScript</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Git and GitHub</li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <h3 id="projects">My Projects</h3>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://buddybudget.onrender.com"
+              ><img
+                src="images/BuddyBudget App.jpg"
+                alt="BuddyBudget thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://buddybudget.onrender.com">BuddyBudget App</a>
+            </h4>
+            <p>
+              BuddyBudget is a mobile design web application where you can
+              manage your budget: you have a list of transactions associated
+              with a category to see how much money you spend and on what.
+            </p>
+            <p>Built with Ruby on Rails and CSS3</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://telltheclouds.onrender.com"
+              ><img
+                src="images/TellTheClouds App.jpg"
+                alt="TellTheClouds thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://telltheclouds.onrender.com">TellTheClouds App</a>
+            </h4>
+            <p>
+              Tell the Clouds is a weather app designed to provide users with
+              up-to-date weather information for various states in Nigeria.
+            </p>
+            <p>Built with React.js, Redux TK, and CSS3</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://nassa.onrender.com"
+              ><img src="images/Nassa App.jpg" alt="thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4><a href="https://nassa.onrender.com">Nassa</a></h4>
+            <p>
+              This web application is a space traveler app for a company that
+              provides commercial and scientific space travel services. The
+              application will allow users to book rockets and join selected
+              space missions.
+            </p>
+            <p>Built with React and Redux</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://wineshuga.github.io/to-do-list/dist"
+              ><img src="images/ToDo list.PNG" alt="thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://wineshuga.github.io/to-do-list/dist"
+                >ToDo List App</a
+              >
+            </h4>
+            <p>
+              ToDo List is a tool that helps to organize your day. It simply
+              lists the things that you need to do and allows you to mark them
+              as complete. It is a very simple yet powerful to-do list.
+            </p>
+            <p>Built with React</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://wineshuga.github.io/blog-site"
+              ><img
+                src="images/blog site.png"
+                alt="BLog landing page thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://wineshuga.github.io/blog-site"
+                >Blog landing page</a
+              >
+            </h4>
+            <p>
+              This is a one page blog site that is fully responsive page
+              covering every screen size. It can serve as a very unique
+              portfolio site
+            </p>
+            <p>Built with HTML5 and CSS3</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://wineshuga.github.io/loyalty-app"
+              ><img src="images/LoyaltyApp.PNG" alt="Loyalty app thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://wineshuga.github.io/loyalty-app">Loyalty App</a>
+            </h4>
+            <p>
+              This is a web page of Loyalbaze app which empowers businesses to
+              offer digital, mobile-first loyalty programs to their customers.
+              With its AI Powered platform, you can easily create and manage
+              custom loyalty and rewards programs, track customer engagement,
+              and gain valuable insights to improve your business.
+            </p>
+            <p>Built with HTML5, CSS3, and JavaScript</p>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="img-box">
+            <a href="https://wineshuga.github.io/EmpowerHER-Foundation/"
+              ><img
+                src="images/EmpowerHer.PNG"
+                alt="EmpowerHER foundation thumbnail"
+            /></a>
+          </div>
+          <div class="img-description">
+            <h4>
+              <a href="https://wineshuga.github.io/EmpowerHER-Foundation/"
+                >EmpowerHER Foundation site</a
+              >
+            </h4>
+            <p>
+              This project is called EmpowerHER Foundation, a non-profit
+              organization dedicated to empowering women through education,
+              training, and support.
+            </p>
+            <p>Built with HTML5, CSS3, and JavaScript</p>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer id="#contact" class="contact">
-        <h3>Contact Me</h3>
-        <ul>
-            <li><a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a></li>
-            <li><a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a></li>
-            <li><a href="mailto:uzochukwuwinnie@gmail.com" target="_blank">Email</a></li>
-            <li><a href="https://github.com/wineshuga" target="_blank">GitHub</a></li>
-        </ul>
+    <footer class="contact">
+      <h3 id="contact">Contact Me</h3>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/wineshuga" target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/wineshuga" target="_blank">GitHub</a>
+        </li>
+        <li>
+          <a href="https://medium.com/@wineshuga" target="_blank">Medium</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a>
+        </li>
+        <li>
+          <a href="mailto:uzochukwuwinnie@gmail.com" target="_blank">Email</a>
+        </li>
+      </ul>
     </footer>
-</body>
-
+  </body>
 </html>
