Remove link from img and add btn to div

--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
         <h3 id="projects">My Projects</h3>
         <div class="projects">
           <div class="img-box">
-            <a href="https://buddybudget.onrender.com" target="_blank"
-              ><img
-                src="images/BuddyBudget App.jpg"
-                alt="BuddyBudget thumbnail"
-            /></a>
+            <img src="images/BuddyBudget App.jpg" alt="BuddyBudget thumbnail" />
           </div>
           <div class="img-description">
             <h4>BuddyBudget App</h4>
@@ -75,18 +71,19 @@
               with a category to see how much money you spend and on what.
             </p>
             <p>Built with Ruby on Rails and CSS3</p>
-            <a href="https://buddybudget.onrender.com" target="_blank"
-              ><button class="project-btn">View project</button></a
-            >
+            <div class="project-btn-div">
+              <a href="https://buddybudget.onrender.com" target="_blank"
+                ><button class="project-btn">View project</button></a
+              >
+            </div>
           </div>
         </div>
         <div class="projects">
           <div class="img-box">
-            <a href="https://telltheclouds.onrender.com" target="_blank"
-              ><img
-                src="images/TellTheClouds App.jpg"
-                alt="TellTheClouds thumbnail"
-            /></a>
+            <img
+              src="images/TellTheClouds App.jpg"
+              alt="TellTheClouds thumbnail"
+            />
           </div>
           <div class="img-description">
             <h4>TellTheClouds App</h4>
@@ -95,16 +92,16 @@
               up-to-date weather information for various states in Nigeria.
             </p>
             <p>Built with React.js, Redux TK, and CSS3</p>
-            <a href="https://telltheclouds.onrender.com" target="_blank"
-              ><button class="project-btn">View project</button></a
-            >
+            <div class="project-btn-div">
+              <a href="https://telltheclouds.onrender.com" target="_blank"
+                ><button class="project-btn">View project</button></a
+              >
+            </div>
           </div>
         </div>
         <div class="projects">
           <div class="img-box">
-            <a href="https://nassa.onrender.com" target="_blank"
-              ><img src="images/Nassa App.jpg" alt="thumbnail"
-            /></a>
+            <img src="images/Nassa App.jpg" alt="thumbnail" />
           </div>
           <div class="img-description">
             <h4>Nassa</h4>
@@ -115,18 +112,16 @@
               space missions.
             </p>
             <p>Built with React and Redux</p>
-            <a href="https://nassa.onrender.com" target="_blank"
-              ><button class="project-btn">View project</button></a
-            >
+            <div class="project-btn-div">
+              <a href="https://nassa.onrender.com" target="_blank"
+                ><button class="project-btn">View project</button></a
+              >
+            </div>
           </div>
         </div>
         <div class="projects">
           <div class="img-box">
-            <a
-              href="https://wineshuga.github.io/to-do-list/dist"
-              target="_blank"
-              ><img src="images/ToDo list.PNG" alt="thumbnail"
-            /></a>
+            <img src="images/ToDo list.PNG" alt="thumbnail" />
           </div>
           <div class="img-description">
             <h4>ToDo List App</h4>
@@ -136,11 +131,13 @@
               as complete. It is a very simple yet powerful to-do list.
             </p>
             <p>Built with React</p>
-            <a
-              href="https://wineshuga.github.io/to-do-list/dist"
-              target="_blank"
-              ><button class="project-btn">View project</button></a
-            >
+            <div class="project-btn-div">
+              <a
+                href="https://wineshuga.github.io/to-do-list/dist"
+                target="_blank"
+                ><button class="project-btn">View project</button></a
+              >
+            </div>
           </div>
         </div>
       </section>
