Add link to github code

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             project you need coded, don’t hesitate to contact me.
           </p>
           <br />
-          <a href="#contact"
-            ><button class="btn contact-btn">Contact me!</button></a
-          >
+          <div class="contact-btn">
+            <a href="#contact"><button class="btn">Contact me!</button></a>
+          </div>
         </div>
       </section>
       <section>
@@ -70,11 +70,12 @@
               manage your budget: you have a list of transactions associated
               with a category to see how much money you spend and on what.
             </p>
-            <p>Built with Ruby on Rails and CSS3</p>
+            <p>Built with Ruby on Rails and CSS3.</p>
             <div class="project-btn-div">
               <a href="https://buddybudget.onrender.com" target="_blank"
-                ><button class="project-btn">View project</button></a
+                ><button class="project-btn">View Demo</button></a
               >
+              <a href=""><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -91,11 +92,12 @@
               Tell the Clouds is a weather app designed to provide users with
               up-to-date weather information for various states in Nigeria.
             </p>
-            <p>Built with React.js, Redux TK, and CSS3</p>
+            <p>Built with React.js, Redux TK, and CSS3.</p>
             <div class="project-btn-div">
               <a href="https://telltheclouds.onrender.com" target="_blank"
-                ><button class="project-btn">View project</button></a
+                ><button class="project-btn">View Demo</button></a
               >
+              <a href=""><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -111,11 +113,12 @@
               application will allow users to book rockets and join selected
               space missions.
             </p>
-            <p>Built with React and Redux</p>
+            <p>Built with React and Redux.</p>
             <div class="project-btn-div">
               <a href="https://nassa.onrender.com" target="_blank"
-                ><button class="project-btn">View project</button></a
+                ><button class="project-btn">View Demo</button></a
               >
+              <a href=""><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -130,13 +133,14 @@
               lists the things that you need to do and allows you to mark them
               as complete. It is a very simple yet powerful to-do list.
             </p>
-            <p>Built with React</p>
+            <p>Built with React.</p>
             <div class="project-btn-div">
               <a
                 href="https://wineshuga.github.io/to-do-list/dist"
                 target="_blank"
-                ><button class="project-btn">View project</button></a
+                ><button class="project-btn">View Demo</button></a
               >
+              <a href=""><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -176,11 +180,10 @@
             placeholder="Hello Winnie..."
             required
           ></textarea>
-          <input
-            class="btn form-button"
-            type="submit"
-            value="Get in touch"
-          /><br />
+          <div class="form-btn">
+            <input class="btn" type="submit" value="Get in touch" />
+          </div>
+          <br />
         </form>
       </section>
     </main>
