--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <main>
       <section>
         <div id="about" class="intro">
-          <h1>Hello. I'm Winnie</h1>
+          <h1>
+            <span class="word word-1">Hello</span
+            ><span class="word word-2">.</span>
+            <span class="word word-3">I'm</span>
+            <span class="word word-4">Winnie</span>
+          </h1>
           <p>
             I’m a full-time software developer! In my free time, I listen to
             lots of music, spend time with family and friends, read a book, or
