Add falling stars animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   </head>
 
   <body>
+    <div class="overlay">
+      <div class="shooting-star"></div>
+      <div class="shooting-star"></div>
+      <div class="shooting-star"></div>
+      <div class="shooting-star"></div>
+      <div class="shooting-star"></div>
+    </div>
     <header>
       <nav>
         <li><a href="#about">About</a></li>
