Fix link to open in new tab

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <a href="https://buddybudget.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/buddy_budget"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/buddy_budget" target="_blank"><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
               <a href="https://telltheclouds.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/tell_the_clouds"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/tell_the_clouds" target="_blank"><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
               <a href="https://nassa.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/nassa"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/nassa" target="_blank"><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
                 target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/to-do-list"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/to-do-list" target="_blank"><button class="project-btn">View Code</button></a>
             </div>
           </div>
         </div>
