Add and style skills

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
             <li>React JS</li>
             <li>Redux TK</li>
             <li>Tailwind CSS</li>
+            <li>Bootstrap</li>
             <li>JavaScript</li>
             <li>HTML5</li>
             <li>CSS3</li>
+            <li>Test-Driven Development</li>
             <li>Git and GitHub</li>
           </ul>
         </div>
@@ -87,7 +89,11 @@
               <a href="https://buddybudget.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/buddy_budget" target="_blank"><button class="project-btn">View Code</button></a>
+              <a
+                href="https://github.com/Wineshuga/buddy_budget"
+                target="_blank"
+                ><button class="project-btn">View Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -109,7 +115,11 @@
               <a href="https://telltheclouds.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/tell_the_clouds" target="_blank"><button class="project-btn">View Code</button></a>
+              <a
+                href="https://github.com/Wineshuga/tell_the_clouds"
+                target="_blank"
+                ><button class="project-btn">View Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -130,7 +140,9 @@
               <a href="https://nassa.onrender.com" target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/nassa" target="_blank"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/nassa" target="_blank"
+                ><button class="project-btn">View Code</button></a
+              >
             </div>
           </div>
         </div>
@@ -152,7 +164,9 @@
                 target="_blank"
                 ><button class="project-btn">View Demo</button></a
               >
-              <a href="https://github.com/Wineshuga/to-do-list" target="_blank"><button class="project-btn">View Code</button></a>
+              <a href="https://github.com/Wineshuga/to-do-list" target="_blank"
+                ><button class="project-btn">View Code</button></a
+              >
             </div>
           </div>
         </div>
