--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <p>Built with Ruby on Rails and CSS3.</p>
             <div class="project-btn-div">
               <a href="https://buddybudget.onrender.com" target="_blank"
-                ><button class="project-btn">View Demo</button></a
+                ><button class="btn project-btn">View Demo</button></a
               >
               <a
                 href="https://github.com/Wineshuga/buddy_budget"
                 target="_blank"
-                ><button class="project-btn">View Code</button></a
+                ><button class="btn project-btn">View Code</button></a
               >
             </div>
           </div>
@@ -113,12 +113,12 @@
             <p>Built with React.js, Redux TK, and CSS3.</p>
             <div class="project-btn-div">
               <a href="https://telltheclouds.onrender.com" target="_blank"
-                ><button class="project-btn">View Demo</button></a
+                ><button class="btn project-btn">View Demo</button></a
               >
               <a
                 href="https://github.com/Wineshuga/tell_the_clouds"
                 target="_blank"
-                ><button class="project-btn">View Code</button></a
+                ><button class="btn project-btn">View Code</button></a
               >
             </div>
           </div>
@@ -138,10 +138,10 @@
             <p>Built with React and Redux.</p>
             <div class="project-btn-div">
               <a href="https://nassa.onrender.com" target="_blank"
-                ><button class="project-btn">View Demo</button></a
+                ><button class="btn project-btn">View Demo</button></a
               >
               <a href="https://github.com/Wineshuga/nassa" target="_blank"
-                ><button class="project-btn">View Code</button></a
+                ><button class="btn project-btn">View Code</button></a
               >
             </div>
           </div>
@@ -162,10 +162,10 @@
               <a
                 href="https://wineshuga.github.io/to-do-list/dist"
                 target="_blank"
-                ><button class="project-btn">View Demo</button></a
+                ><button class="btn project-btn">View Demo</button></a
               >
               <a href="https://github.com/Wineshuga/to-do-list" target="_blank"
-                ><button class="project-btn">View Code</button></a
+                ><button class="btn project-btn">View Code</button></a
               >
             </div>
           </div>
@@ -207,7 +207,7 @@
             required
           ></textarea>
           <div class="form-btn">
-            <input class="btn" type="submit" value="Get in touch" />
+            <button class="btn" type="submit">Get in touch</button>
           </div>
           <br />
         </form>
