--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="./Winnie's Resume.pdf" class="resume-btn" download>Get Resume</a></li>
       </nav>
     </header>
     <main>
