Remove hard coded skills and projects

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="./Winnie's Resume.pdf" class="resume-btn" download>Get Resume</a></li>
+        <li>
+          <a href="./Winnie's Resume.pdf" class="resume-btn" download
+            >Get Resume</a
+          >
+        </li>
       </nav>
     </header>
     <main>
@@ -56,121 +60,12 @@
       <section>
         <div class="skills">
           <h3 id="skills">My Skills</h3>
-          <ul>
-            <li>Ruby on Rails</li>
-            <li>Ruby</li>
-            <li>PostgreSQL</li>
-            <li>React JS</li>
-            <li>Redux TK</li>
-            <li>Tailwind CSS</li>
-            <li>Bootstrap</li>
-            <li>JavaScript</li>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>Test-Driven Development</li>
-            <li>Git and GitHub</li>
-          </ul>
+          <!-- JS skills list goes here -->
         </div>
       </section>
-      <section>
+      <section class="project-section">
         <h3 id="projects">My Projects</h3>
-        <div class="projects">
-          <div class="img-box">
-            <img src="images/BuddyBudget App.jpg" alt="BuddyBudget thumbnail" />
-          </div>
-          <div class="img-description">
-            <h4>BuddyBudget App</h4>
-            <p>
-              BuddyBudget is a mobile design web application where you can
-              manage your budget: you have a list of transactions associated
-              with a category to see how much money you spend and on what.
-            </p>
-            <p>Built with Ruby on Rails and CSS3.</p>
-            <div class="project-btn-div">
-              <a href="https://buddybudget.onrender.com" target="_blank"
-                ><button class="btn project-btn">View Demo</button></a
-              >
-              <a
-                href="https://github.com/Wineshuga/buddy_budget"
-                target="_blank"
-                ><button class="btn project-btn">View Code</button></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="projects">
-          <div class="img-box">
-            <img
-              src="images/TellTheClouds App.jpg"
-              alt="TellTheClouds thumbnail"
-            />
-          </div>
-          <div class="img-description">
-            <h4>TellTheClouds App</h4>
-            <p>
-              Tell the Clouds is a weather app designed to provide users with
-              up-to-date weather information for various states in Nigeria.
-            </p>
-            <p>Built with React.js, Redux TK, and CSS3.</p>
-            <div class="project-btn-div">
-              <a href="https://telltheclouds.onrender.com" target="_blank"
-                ><button class="btn project-btn">View Demo</button></a
-              >
-              <a
-                href="https://github.com/Wineshuga/tell_the_clouds"
-                target="_blank"
-                ><button class="btn project-btn">View Code</button></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="projects">
-          <div class="img-box">
-            <img src="images/Nassa App.jpg" alt="thumbnail" />
-          </div>
-          <div class="img-description">
-            <h4>Nassa</h4>
-            <p>
-              This web application is a space traveler app for a company that
-              provides commercial and scientific space travel services. The
-              application will allow users to book rockets and join selected
-              space missions.
-            </p>
-            <p>Built with React and Redux.</p>
-            <div class="project-btn-div">
-              <a href="https://nassa.onrender.com" target="_blank"
-                ><button class="btn project-btn">View Demo</button></a
-              >
-              <a href="https://github.com/Wineshuga/nassa" target="_blank"
-                ><button class="btn project-btn">View Code</button></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="projects">
-          <div class="img-box">
-            <img src="images/ToDo list.PNG" alt="thumbnail" />
-          </div>
-          <div class="img-description">
-            <h4>ToDo List App</h4>
-            <p>
-              ToDo List is a tool that helps to organize your day. It simply
-              lists the things that you need to do and allows you to mark them
-              as complete. It is a very simple yet powerful to-do list.
-            </p>
-            <p>Built with React.</p>
-            <div class="project-btn-div">
-              <a
-                href="https://wineshuga.github.io/to-do-list/dist"
-                target="_blank"
-                ><button class="btn project-btn">View Demo</button></a
-              >
-              <a href="https://github.com/Wineshuga/to-do-list" target="_blank"
-                ><button class="btn project-btn">View Code</button></a
-              >
-            </div>
-          </div>
-        </div>
+        <!-- JS projects list goes here -->
       </section>
       <section class="contact">
         <h3 id="contact">Contact Me</h3>
@@ -235,5 +130,7 @@
         </li>
       </ul>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
