--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
             <span class="word word-4">Winnie</span>
           </h1>
           <p>
-            I’m a full-time software developer! In my free time, I listen to
+            I’m a full-time web developer! In my free time, I listen to
             lots of music, spend time with family and friends, read a book, or
             write. Soon, I will add biking, learning the guitar, and improving
             my crocheting skills to the list.
           </p>
           <p>
             I can help you build a product, feature or website. Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hesitate to contact me.
+            some of my work and experience! Don’t hesitate to contact me if you have any opportunity for me.
           </p>
           <br />
           <div class="contact-btn">
