--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" initial-scale="1.0" />
+    <meta property="og:title" content="Hello, I'm Winnie | Wineshuga" />
+    <meta
+      name="description"
+      property="og:description"
+      content="I can help you build a product, feature or website. Look through
+    some of my work and experience! Don’t hesitate to contact me if you have any opportunity for me."
+    />
+    <meta property="og:image" content="./images/preview-image.png"/>
+    <meta property="og:url" content="https://wineshuga.netlify.com"/>
     <title>Wineshuga</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet" />
@@ -41,14 +50,15 @@
             <span class="word word-4">Winnie</span>
           </h1>
           <p>
-            I’m a full-time web developer! In my free time, I listen to
-            lots of music, spend time with family and friends, read a book, or
-            write. Soon, I will add biking, learning the guitar, and improving
-            my crocheting skills to the list.
+            I’m a full-time web developer! In my free time, I listen to lots of
+            music, spend time with family and friends, read a book, or write.
+            Soon, I will add biking, learning the guitar, and improving my
+            crocheting skills to the list.
           </p>
           <p>
             I can help you build a product, feature or website. Look through
-            some of my work and experience! Don’t hesitate to contact me if you have any opportunity for me.
+            some of my work and experience! Don’t hesitate to contact me if you
+            have any opportunity for me.
           </p>
           <br />
           <div class="contact-btn">
