Fix: Improve the look of the intro section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" initial-scale="1.0" />
-    <title>Winnie's space</title>
+    <title>Uzochukwu Winnie</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -39,7 +39,9 @@
         </button>
 
         <div class="absolute top-12 z-10 hidden side-bar">
-          <div class="w-50 rounded-3xl text-sm transition-all duration-1000 ease-in-out">
+          <div
+            class="w-50 rounded-3xl text-sm transition-all duration-1000 ease-in-out"
+          >
             <div
               class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
             >
@@ -74,12 +76,12 @@
         <section class="text-center w-fit m-auto">
           <div>
             <h1
-              class="text-4xl font-bold text-gray-900 md:truncate md:text-3xl md:tracking-tight"
+              class="text-4xl font-bold text-gray-900"
             >
-              Winnie's Space
+              Uzochukwu Winnie
             </h1>
           </div>
-          <div class="flex justify-center gap-x-10">
+          <div class="flex justify-center gap-x-10 my-3">
             <a class="text-sky-500 hover:text-sky-700" href="#works">Works</a>
             <a class="text-sky-500 hover:text-sky-700" href="#articles"
               >Articles</a
@@ -126,7 +128,7 @@
           <h1
             class="text-3xl font-bold text-gray-900 sm:truncate md:text-5xl sm:tracking-tight"
           >
-            Winnie's Space
+            Uzochukwu Winnie
           </h1>
           <div class="flex justify-center gap-x-10">
             <a class="text-sky-500 hover:text-sky-700" href="#works">Works</a>
@@ -140,42 +142,30 @@
         </section>
       </div>
     </header>
-    <main class="px-4 py-6">
-      <section
-        id="intro"
-        class="grid grid-cols-5 grid-rows-1 md:grid-cols-8 md:grid-rows-4 relative"
-      >
-        <section
-          class="col-span-5 w-72 md:w-full md:col-span-4 md:col-start-2 md:row-start-2 md:row-end-4 lg:absolute lg:top-32"
-        >
-          <img src="./images/profile-pic.jpg" alt="Winnie's picture" />
+    <main class="md:px-4 md:py-6">
+      <section id="intro" class="max-w-[900px] my-3 md:h-96 md:mx-auto md:flex">
+        <section class="w-10/12 md:w-fit md:flex items-center relative md:sticky left-[1rem]">
+          <img
+            src="./images/profile-pic.jpg"
+            class="w-fit"
+            alt="Uzochukwu Winnie"
+          />
         </section>
-        <section
-          class="bg-zinc-300 p-8 md:p-12 lg:p-20 pt-24 col-start-2 col-span-4 md:col-start-5 lg:col-start-4 md:row-start-1 absolute top-56 md:top-20 lg:top-12 leading-7"
-        >
-          <h2 class="text-2xl font-bold text-gray-900 text-center pb-3">
-            Hi, I’m Winnie.
-          </h2>
-          <p class="mb-3">
-            I am a Full-stack Developer, with a background in Agriculture,
-            Customer Service, and Professional teaching. I have been in the tech
-            industry for 2 years and in the past 7 months, I have extensively
-            applied myself to various skills and tools while working as a
-            self-employed developer.
-          </p>
-
-          <p class="mb-3">
-            I have had the opportunity to pair-program with colleagues from
-            diverse cultures and backgrounds and work on real-world problems,
-            building 20+ amazing projects both solo and collaboratively.
-          </p>
-
-          <p>
-            In my free time, I listen to lots of music, spend time with family
-            and friends, read a book, solve some coding challenges, or watch
-            movies. Soon, I will add biking, learning the guitar, and taking
-            evening walks to the list.
-          </p>
+        <section class="bg-zinc-300 p-6 md:w-full md:sticky relative top-[-2rem] left-[-1rem]">
+          <article>
+            <h2 class="md:text-3xl text-2xl font-bold md:my-5 text-gray-900 text-center pb-3">
+              Small Talk
+            </h2>
+            <p class="md:mb-10 mb-3 md:text-xl text-lg">
+              I am a Full-stack Developer, with a background in Agriculture,
+              Customer Service, and Professional teaching. These experiences has
+              greatly influenced my work as a developer.
+            </p>
+            <p class="md:text-xl text-lg">
+              I am about a lot of things so I wouldn't bore you with a list.
+              This site is an attempt to summarize the most important ones.
+            </p>
+          </article>
         </section>
       </section>
       <section id="works"></section>
