Add updated resume

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li>
-          <a href="./Winnie's Resume.pdf" class="resume-btn" download
+          <a href="./Resume.pdf" class="resume-btn" download
             >Get Resume</a
           >
         </li>
